<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="420dp"
        android:layout_marginTop="16dp"
        android:background="#00F10303"
        android:backgroundTint="#ADCDDC39"
        android:backgroundTintMode="screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImage" />

    <TextView
        android:id="@+id/pressureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textSea"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblSea"
        app:layout_constraintStart_toStartOf="@+id/textLong" />

    <TextView
        android:id="@+id/lblLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/lblLat"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/lblTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblTime"
        app:layout_constraintStart_toStartOf="@+id/lblLat"
        app:layout_constraintTop_toBottomOf="@+id/lblTemp" />

    <TextView
        android:id="@+id/lblLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblLong"
        app:layout_constraintStart_toStartOf="@+id/lblLat"
        app:layout_constraintTop_toBottomOf="@+id/lblLat" />

    <TextView
        android:id="@+id/lblSea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/lblSea"
        app:layout_constraintStart_toStartOf="@+id/lblLat"
        app:layout_constraintTop_toBottomOf="@+id/lblLong" />

    <TextView
        android:id="@+id/lblWDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblWDir"
        app:layout_constraintStart_toStartOf="@+id/lblLat"
        app:layout_constraintTop_toBottomOf="@+id/lblSea" />

    <TextView
        android:id="@+id/lblWSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblWSpeed"
        app:layout_constraintStart_toStartOf="@+id/lblLat"
        app:layout_constraintTop_toBottomOf="@+id/lblWDir" />

    <TextView
        android:id="@+id/lblTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/lblTemp"
        app:layout_constraintStart_toStartOf="@+id/lblLat"
        app:layout_constraintTop_toBottomOf="@+id/lblWSpeed" />

    <TextView
        android:id="@+id/tempValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTemp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblTemp"
        app:layout_constraintStart_toStartOf="@+id/textLong" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTime"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblTime"
        app:layout_constraintStart_toStartOf="@+id/textLong" />

    <TextView
        android:id="@+id/speedValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textWSpeed"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblWSpeed"
        app:layout_constraintStart_toStartOf="@+id/textLong" />

    <TextView
        android:id="@+id/directionValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textWDir"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblWDir"
        app:layout_constraintStart_toStartOf="@+id/textLong" />

    <EditText
        android:id="@+id/textLat"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginEnd="45dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/textLat"
        android:inputType="numberDecimal|numberSigned"
        android:textColorHint="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblLat"
        app:layout_constraintEnd_toEndOf="@+id/view" />

    <EditText
        android:id="@+id/textLong"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/textLong"
        android:inputType="numberDecimal|numberSigned"
        android:textColorHint="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/lblLong"
        app:layout_constraintEnd_toEndOf="@+id/textLat" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/imgDesc"
        android:src="@drawable/clear_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="169dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="#CCDC38"
        android:text="@string/btnUpdate"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>